GH-238: prepare combine scraper for docker